deploy/namespaces/medplum/istio/03b-peerath-redis-medplum-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: redis-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  mtls:
    mode: PERMISSIVE
