deploy/namespaces/medplum/istio/03c-peerath-provider-medplum-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: provider-permissive
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: provider-medplum
  mtls:
    mode: PERMISSIVE
