deploy/namespaces/medplum/istio/05-peerauth-medplum-worker-fhir-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: medplum-service-mtls
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: medplum
  mtls:
    mode: STRICT
