deploy/namespaces/medplum/istio/04-dr-redis-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-redis-istio-mutual
  namespace: medplum
spec:
  host: medplum-redis-master.medplum.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
