deploy/namespaces/medplum/istio/05-dr-postgresql-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-postgresql-istio-mutual
  namespace: medplum
spec:
  host: medplum-postgresql.medplum.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
