deploy/namespaces/medplum/istio/05.b-dr-exporter-postgresql-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-exporter-postgresql-istio-mutual
  namespace: medplum
spec:
  host: medplum-postgres-exporter.medplum.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
