deploy/namespaces/medplum/istio/04-authz-medplum-allow-workers.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-workers
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: medplum
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/pompetrack-core/sa/worker-fhir
    to:
    - operation:
        ports: ["80"]
        methods: ["POST", "GET"]
        paths:
        - "/oauth2/token"
        - "/fhir/R4/*"
