deploy/namespaces/medplum/istio/06-authz-allow-workers-to-medplum.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-worker-fhir-to-medplum
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: medplum
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/pompetrack-core/sa/worker-fhir
