deploy/namespaces/medplum/istio/07-allow-podcidr-to-medplum.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-podcidr-to-medplum
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: medplum
      app.kubernetes.io/name: medplum
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks:
        - "192.168.180.0/24"
