deploy/namespaces/medplum/istio/08-allow-medplum-app-to-medplum.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-medplum-app-to-medplum
  namespace: medplum
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: medplum
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/medplum/sa/default"
