deploy/namespaces/medplum/istio/13-allow-streamlit-to-medplum.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-streamlit-to-medplum
  namespace: medplum
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: medplum
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pompetrack-core
      podSelector:
        matchLabels:
          app: streamlit
    ports:
    - protocol: TCP
      port: 80
    - port: 8103
      protocol: TCP
